<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.fohanalyzer</groupId>
  <artifactId>fohanalyzer-java</artifactId>
  <version>2.4.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>FOHanalyzer</name>
  <description>Real-time dual-channel RTA for Front of House engineers</description>
  <url>https://github.com/d135-1r43/fohanalyzer-java</url>

  <!--
    developerConnection is SSH because release:prepare has to push the tag and the two
    version commits; connection stays HTTPS so a read-only checkout needs no key. The tag
    element is a placeholder the release plugin rewrites and then resets to HEAD.
  -->
  <scm>
    <connection>scm:git:https://github.com/d135-1r43/fohanalyzer-java.git</connection>
    <developerConnection>scm:git:git@github.com:d135-1r43/fohanalyzer-java.git</developerConnection>
    <url>https://github.com/d135-1r43/fohanalyzer-java</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>GNU General Public License v3.0 or later</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javafx.version>21.0.5</javafx.version>
    <junit.version>5.11.3</junit.version>
    <tarsosdsp.version>2.5</tarsosdsp.version>
    <slf4j.version>2.0.16</slf4j.version>
    <formatter.plugin.version>2.29.0</formatter.plugin.version>
    <app.mainClass>com.fohanalyzer.Main</app.mainClass>
  </properties>

  <!-- TarsosDSP is not on Maven Central; it is published to the author's own repo. -->
  <repositories>
    <repository>
      <id>be.0110.repo-releases</id>
      <name>0110.be releases</name>
      <url>https://mvn.0110.be/releases</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <!-- FFT + window functions + YIN pitch detection (be.tarsos.dsp.util.fft, .pitch) -->
    <dependency>
      <groupId>be.tarsos.dsp</groupId>
      <artifactId>core</artifactId>
      <version>${tarsosdsp.version}</version>
    </dependency>

    <!--
      Logging. slf4j-simple rather than Logback: this app writes a handful of warnings and
      dev-aid lines, so a full backend buys nothing, and both artifacts are MIT — Logback is
      EPL-1.0/LGPL-2.1, which would add a licence question to a GPL-3.0 distribution that
      does not need one.
    -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
      </plugin>
      <!--
        Implementation-Version in the manifest is where com.fohanalyzer.Version reads the
        number it puts in the header chip and the rail footer, so the UI cannot drift from
        the version this build stamps on the bundle.
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>${app.mainClass}</mainClass>
        </configuration>
      </plugin>
      <!--
        Code style is the Eclipse profile in formatter/java.xml, applied by
        `mvn formatter:format`. The validate goal below runs on every build and fails it when
        a source file is not formatted, so the style is enforced rather than suggested.
      -->
      <plugin>
        <groupId>net.revelc.code.formatter</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <version>${formatter.plugin.version}</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>validate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <configFile>${project.basedir}/formatter/java.xml</configFile>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
